src/BadScript.Tests/tests/passing/types/function/properties/invoke.bs
r = false
function f()
{
	r = true
}
f.Invoke([])
return r