src/BadScript.Tests/tests/failing/invalid-operations/missing_property_03.bs
function f()
{
	
}

a = f.a